--- a/masal-frontend/src/pages/MasalOlustur.css
+++ b/masal-frontend/src/pages/MasalOlustur.css
@@ -1,7 +1,7 @@
 .masal-olustur {
   margin: 0;
   padding: 40px 20px;
-  min-height: 100vh;
+  height: 100vh;
   width: 100vw;
   background-image: url('../images/halloween-ghost-3d-illustration.jpg');
   background-size: cover;
@@ -13,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .masal-olustur::before {
